fixing alignment and added clear button

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   
   .container{
     padding-bottom: 2rem;
+    margin: 0 auto;
   }
   .description{
     white-space: pre-wrap;
@@ -68,9 +69,14 @@ body {
   
   .saveBtn {
     border-left: 1px solid black;
+    background-color: #06AED5;
+    color: white;
+  }
+  .clrBtn {
+    border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #06AED5;
+    background-color: springgreen;
     color: white;
   }
   
